[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Scripts/AudioSetting.gd" type="Script" id=1]
[ext_resource path="res://Assets/Themes/basic.theme" type="Theme" id=2]
[ext_resource path="res://Assets/Sounds/buttons_enter.wav" type="AudioStream" id=3]

[node name="AudioSettings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -3.18195
margin_bottom = -3.18188
grow_horizontal = 2
grow_vertical = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 392.0
margin_right = 632.0
margin_bottom = 600.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 20
alignment = 1

[node name="Audio" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 183.0
margin_right = 240.0
margin_bottom = 207.0
theme = ExtResource( 2 )
text = "sounds"
align = 1

[node name="AudioContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 227.0
margin_right = 240.0
margin_bottom = 267.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Toggle" type="CheckButton" parent="HBoxContainer/VBoxContainer/AudioContainer"]
margin_left = 20.0
margin_right = 96.0
margin_bottom = 40.0
pressed = true

[node name="Volume" type="HSlider" parent="HBoxContainer/VBoxContainer/AudioContainer"]
margin_left = 100.0
margin_right = 220.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 40 )
max_value = 1.0
step = 0.1
value = 1.0
tick_count = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 287.0
margin_right = 240.0
margin_bottom = 311.0
theme = ExtResource( 2 )
text = "music"
align = 1

[node name="MusicContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 331.0
margin_right = 240.0
margin_bottom = 371.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Toggle" type="CheckButton" parent="HBoxContainer/VBoxContainer/MusicContainer"]
margin_left = 20.0
margin_right = 96.0
margin_bottom = 40.0
pressed = true

[node name="Volume" type="HSlider" parent="HBoxContainer/VBoxContainer/MusicContainer"]
margin_left = 100.0
margin_right = 220.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 40 )
max_value = 1.0
step = 0.1
value = 1.0
tick_count = 10

[node name="BackToMenu" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 391.0
margin_right = 240.0
margin_bottom = 417.0
rect_min_size = Vector2( 240, 0 )
theme = ExtResource( 2 )
text = "back to menu"

[node name="SampleSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Sounds"

[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer/AudioContainer/Toggle" to="." method="mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/VBoxContainer/AudioContainer/Toggle" to="." method="mouse_exited"]
[connection signal="toggled" from="HBoxContainer/VBoxContainer/AudioContainer/Toggle" to="." method="toggle_sounds"]
[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer/AudioContainer/Volume" to="." method="mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/VBoxContainer/AudioContainer/Volume" to="." method="mouse_exited"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/AudioContainer/Volume" to="." method="change_sound_volume"]
[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer/MusicContainer/Toggle" to="." method="mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/VBoxContainer/MusicContainer/Toggle" to="." method="mouse_exited"]
[connection signal="toggled" from="HBoxContainer/VBoxContainer/MusicContainer/Toggle" to="." method="toggle_music"]
[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer/MusicContainer/Volume" to="." method="mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/VBoxContainer/MusicContainer/Volume" to="." method="mouse_exited"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/MusicContainer/Volume" to="." method="change_music_volume"]
[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer/BackToMenu" to="." method="mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/VBoxContainer/BackToMenu" to="." method="mouse_exited"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/BackToMenu" to="." method="back_to_menu"]
